TestSuite/errors/err0085.pas
type TClass = class
procedure Test; abstract;
begin
end;
end;

begin
end.